# Convertor_csv_para_xls

./: Dados_sensores_11_01_22_a_12_01_22.csv  main.py  pyproject.toml
